--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "postcss": "^8",
+    "tailwindcss": "^3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
